fixed placeholder and text spacing

--- a/src/Projects.css
+++ b/src/Projects.css
@@ -16,7 +16,7 @@
 .project-image-placeholder {
     height: 20%;
     width: 20%;
-    margin-bottom: 0.2rem;
+    margin-bottom: 1.2rem;
 }
 
 .project-name > span {
